fixed off-centerness of login page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -113,7 +113,7 @@ text-shadow: 2px 2px 5px #999;
 
 .notification {
 width: 900px;
-margin: 15px auto 25px 0;
+margin: 15px auto 25px auto;
 padding: 10px;
 -webkit-box-shadow: 0 1px 2px #999;
 -moz-box-shadow: 0 1px 2px #999;
